--- a/FleaBrewCooldownFix.csproj
+++ b/FleaBrewCooldownFix.csproj
@@ -21,7 +21,7 @@
 		<PathMap Condition="'$(Configuration)' == 'Release'">$(MSBuildProjectDirectory)=/</PathMap>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>icon.png</PackageIcon>
-		<RepositoryUrl>https://github.com/Clazex/FleaBrewCooldownFix</RepositoryUrl>
+		<RepositoryUrl>https://github.com/Clazex/Silksong.FleaBrewCooldownFix</RepositoryUrl>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all" />
